web-infras/parser/tests/fixtures/babel/core/uncategorised/500/output.txt
[SyntaxError]: Octal literals are not allowed in strict mode (1,34)
1|function hello() { 'use strict'; 021; }
 |                                ^
